Fixes #53;  adds css changes for aligning logos

--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -446,6 +446,12 @@ ul.menuitems li a:hover {
 		#sponsora{
 			margin-top: -25px;
 		}
+		#sponsorb{
+			margin-top: 20px;
+		}
+		#sponsorc{
+			margin-top: 25px;
+		}
 
 		.floatright{
 			float: right;
